; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_adcimm.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_adcimm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"adc $%d,%%%s\0A\00", align 1
@regname = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_adcimm(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32*, i32** @regname, align 8
  %7 = load i32, i32* %4, align 4
  %8 = zext i32 %7 to i64
  %9 = getelementptr inbounds i32, i32* %6, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @assem_debug(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = icmp ult i32 %12, 8
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = icmp slt i32 %16, 128
  br i1 %17, label %18, label %27

18:                                               ; preds = %2
  %19 = load i32, i32* %3, align 4
  %20 = icmp sge i32 %19, -128
  br i1 %20, label %21, label %27

21:                                               ; preds = %18
  %22 = call i32 @output_byte(i32 131)
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @output_modrm(i32 3, i32 %23, i32 2)
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @output_byte(i32 %25)
  br label %33

27:                                               ; preds = %18, %2
  %28 = call i32 @output_byte(i32 129)
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @output_modrm(i32 3, i32 %29, i32 2)
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @output_w32(i32 %31)
  br label %33

33:                                               ; preds = %27, %21
  ret void
}

declare dso_local i32 @assem_debug(i8*, i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @output_byte(i32) #1

declare dso_local i32 @output_modrm(i32, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
